# DDM_PARSE_Fusion

./: .gitignore  batch_md_to_ttl.ps1  batch_pdf_to_md.ps1  command.txt  main.py  marker2ttl.py  pyproject.toml
code/PARSE/Papers/Pipeline/: Pipeline.py  marker2ttl.py  marker2ttl_NewOntology.py  parse_md.py  parse_md_new.py  pdf2md.py  utils.py
code/PARSE/Papers/RDF/: RDF_Constrcut_Step.py
md_out/1702.01105v2/: 1702.01105v2.md  1702.01105v2_meta.json
tt_out/: 1702.01105v2.ttl
