[project]
name = "ddm-parse-fusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rdflib>=7.1.0",
    "markdown>=3.7",
    "langchain>=0.3.4",
    "langchain-openai>=0.2.3",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "pandas>=2.2.3",
    "marker-pdf>=1.6.1",
]
